# fugo

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: FlinnUtils.cmake  FugoSBE.cmake  FugoUtils.cmake
code/: CMakeLists.txt
code/fugo_config/fugo/config/: Exception.h  Json.h  Json_test.cpp  Validator.h  Validator_test.cpp  ValueBinder.h
code/fugo_core/: CMakeLists.txt
code/fugo_core/fugo/core/: CtString.h  CtString_test.cpp  FileStream.cpp  FileStream.h  LoopRateLimit.h  LoopRateLimit_test.cpp  PosixError.h  Signals.cpp  Signals.h  SpinLock.h  ThreadUtils.cpp  ThreadUtils_test.cpp
code/fugo_logger/: CMakeLists.txt
code/fugo_logger/fugo/logger/: BackendOptions.h  Clock.cpp  Clock.h  Codec.h  Common.h  DailyFileSink.cpp  DailyFileSink.h  Logger.h  Logger_test.cpp  Macro.h  Sink.cpp  Sink.h  StdOutSink.cpp  StdOutSink.h  Transform.h
code/fugo_logger/fugo/logger/detail/: Backend.cpp  Backend.h  BackendThread.cpp  BackendThread.h  BoundedSPSCRawQueue.h  LoggerQueue.h  LoggerQueueManager.cpp  LoggerQueueManager.h  LoggerQueueManager_test.cpp  ThreadContext.h  TicksHelper.h
code/fugo_sbe/fugo/sbe/: Concepts.h  Utils.h  lib.cpp
code/fugo_service/fugo/service/: BasicCommandSender.h  BasicDataSender.h  CommandQueue.h  ConsumerFeatures.h  DataQueue.h  Environment.cpp  Environment.h  Environment_test.cpp  Logger.cpp  Logger.h  ProducerFeatures.h
code/sample/: CMakeLists.txt  Config.cpp  Config.h  Messaging.h  Process.cpp  Process.h  dump.cpp  main.cpp  messaging.xml
examples/: CMakeLists.txt
examples/feed_handler/: CMakeLists.txt  Config.cpp  Config.h  Process.cpp  Process.h  config.json  dump.cpp  main.cpp  messaging.xml
flinn_core/: CMakeLists.txt
flinn_core/flinn_core/: lib_test.cpp
flinn_logger/: CMakeLists.txt
flinn_logger/flinn_logger/: logger.h
libs/: CMakeLists.txt
libs/fugo_config/: CMakeLists.txt
libs/fugo_config/fugo/config/: BasicBinder.h  BasicBinder_test.cpp  Checker.h  Config.cpp  Config.h  Exception.h  Json.h  JsonBinder.h  Json_test.cpp  Parameter.h  Validator.h  Validator_test.cpp  Validators.h  ValueBinder.h  ValueBinder_test.cpp
libs/fugo_core/: CMakeLists.txt
libs/fugo_core/fugo/core/: CtString_test.cpp  Environment.cpp  Environment.h  Environment_test.cpp  FileStream.cpp  FileStream.h  LoopRateLimit.h  Platform.h  PosixError.h  Receiver.h  Result.h  Sender.h  Sender_test.cpp  Signals.cpp  SpinLock.h  ThreadUtils.cpp  ThreadUtils.h  TypeTraits.h
libs/fugo_logger/: CMakeLists.txt
libs/fugo_logger/fugo/logger/: Backend.cpp  Backend.h  BackendOptions.h  BackendThread.cpp  BackendThread.h  Clock.cpp  Clock.h  Codec.h  Common.h  DailyFileSink.cpp  DailyFileSink.h  Logger.h  LoggerContext.cpp  LoggerContext.h  Logger_test.cpp  Macro.h  Queue.h  QueueManager.cpp  QueueManager.h  QueueManager_test.cpp  Runtime.h  Sink.h  StdOutSink.cpp  StdOutSink.h  ThreadContext.h  ThreadContextManager.cpp  ThreadContextManager.h  ThreadContextManager_test.cpp  Transform.h
libs/fugo_logger/fugo/logger/detail/: Backend.h  BackendThread.cpp  BackendThread.h  BoundedSPSCRawQueue.h  LoggerQueue.h  LoggerQueueManager.cpp  LoggerQueueManager.h  LoggerQueueManager_test.cpp  Queue.h  QueueManager.cpp  QueueManager.h  QueueManager_test.cpp  ThreadContext.h  TicksHelper.h
libs/fugo_sbe/: CMakeLists.txt
libs/fugo_sbe/fugo/sbe/: Concepts.h  Prepare.h  lib.cpp
libs/fugo_service/: CMakeLists.txt
libs/fugo_service/fugo/service/: BasicCommandReceiver.h  BasicDataReceiver.h  BroadcastQueue.h  CommandQueue.h  DataQueue.h  Environment.cpp  Environment.h  Environment_test.cpp  Logger.cpp  Receiver.h  ReceiverFeatures.h  Sender.h  SenderFeatures.h
libs/messaging/: CMakeLists.txt  lib.cpp  messaging.xml
